Complete recommendation eligibility rules