@@ -12,8 +12,9 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.Comparator;
+import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @Service
 @RequiredArgsConstructor
@@ -27,20 +28,21 @@ public class DecisionEngine {
     public RecommendationResponse recommend(RecommendationRequest request) {
         LocalDate requestDate = request.getDate() != null ? request.getDate() : LocalDate.now();
         List<Promotion> activePromotions = promotionRepository.findActivePromotions(requestDate);
+        Comparator<ScoredPromotion> rankingComparator = recommendationComparator();
 
-        List<Promotion> eligiblePromotions = activePromotions.stream()
+        List<ScoredPromotion> scoredPromotions = activePromotions.stream()
                 .filter(p -> isEligible(p, request))
-                .collect(Collectors.toList());
+            .map(promotion -> toScoredPromotion(promotion, request.getAmount()))
+            .filter(scored -> scored.cappedReturn() > 0)
+            .sorted(rankingComparator)
+            .toList();
 
-        List<CardRecommendation> recommendations = eligiblePromotions.stream()
-                .map(promotion -> toScoredPromotion(promotion, request.getAmount()))
-                .sorted(Comparator
-                        .comparingInt(ScoredPromotion::cappedReturn).reversed()
-                        .thenComparing(scored -> scored.promotion().getValidUntil(), Comparator.nullsLast(Comparator.naturalOrder()))
-                        .thenComparing(scored -> scored.promotion().getAnnualFee(), Comparator.nullsLast(Comparator.naturalOrder()))
-                        .thenComparing(scored -> scored.promotion().getBankCode(), Comparator.nullsLast(String.CASE_INSENSITIVE_ORDER))
-                        .thenComparing(scored -> scored.promotion().getCardCode(), Comparator.nullsLast(String.CASE_INSENSITIVE_ORDER))
-                        .thenComparing(scored -> scored.promotion().getPromoVersionId(), Comparator.nullsLast(String.CASE_INSENSITIVE_ORDER)))
+        Map<String, ScoredPromotion> bestPromotionByCard = new LinkedHashMap<>();
+        for (ScoredPromotion scoredPromotion : scoredPromotions) {
+            bestPromotionByCard.putIfAbsent(distinctCardKey(scoredPromotion), scoredPromotion);
+        }
+
+        List<CardRecommendation> recommendations = bestPromotionByCard.values().stream()
                 .limit(5)
                 .map(this::toRecommendation)
                 .toList();
@@ -58,7 +60,13 @@ public class DecisionEngine {
             return false;
         }
 
-        if (p.getCategory() != null && !p.getCategory().equalsIgnoreCase(r.getCategory())) {
+        if (p.getCardStatus() != null && !"ACTIVE".equalsIgnoreCase(p.getCardStatus())) {
+            return false;
+        }
+
+        String normalizedCategory = normalizeValue(r.getCategory());
+
+        if (p.getCategory() != null && !normalizeValue(p.getCategory()).equals(normalizedCategory)) {
             return false;
         }
 
@@ -68,10 +76,19 @@ public class DecisionEngine {
 
         if (r.getCardCodes() != null && !r.getCardCodes().isEmpty()) {
             boolean matchesCard = r.getCardCodes().stream()
-                    .anyMatch(cardCode -> cardCode.equalsIgnoreCase(p.getCardCode()));
+                    .map(this::normalizeValue)
+                    .anyMatch(cardCode -> cardCode.equals(normalizeValue(p.getCardCode())));
             if (!matchesCard) {
                 return false;
             }
+        }
+
+        if (!matchesLocation(p, r.getLocation())) {
+            return false;
+        }
+
+        if (matchesExcludedConditions(p, r)) {
+            return false;
         }
 
         return true;
@@ -86,8 +103,33 @@ public class DecisionEngine {
         return new ScoredPromotion(promotion, estimatedReturn, cappedReturn);
     }
 
+    private Comparator<ScoredPromotion> recommendationComparator() {
+        return Comparator
+                .comparingInt(ScoredPromotion::cappedReturn).reversed()
+                .thenComparing(scored -> scored.promotion().getValidUntil(), Comparator.nullsLast(Comparator.naturalOrder()))
+                .thenComparing(scored -> scored.promotion().getAnnualFee(), Comparator.nullsLast(Comparator.naturalOrder()))
+                .thenComparing(scored -> scored.promotion().getBankCode(), Comparator.nullsLast(String.CASE_INSENSITIVE_ORDER))
+                .thenComparing(scored -> scored.promotion().getCardCode(), Comparator.nullsLast(String.CASE_INSENSITIVE_ORDER))
+                .thenComparing(scored -> scored.promotion().getPromoVersionId(), Comparator.nullsLast(String.CASE_INSENSITIVE_ORDER));
+    }
+
+    private String distinctCardKey(ScoredPromotion scoredPromotion) {
+        Promotion promotion = scoredPromotion.promotion();
+        String cardCode = normalizeValue(promotion.getCardCode());
+        if (!cardCode.isBlank()) {
+            return cardCode;
+        }
+
+        return normalizeValue(promotion.getPromoVersionId());
+    }
+
+    private String normalizeValue(String value) {
+        return value == null ? "" : value.trim().toUpperCase();
+    }
+
     private CardRecommendation toRecommendation(ScoredPromotion scoredPromotion) {
         Promotion promotion = scoredPromotion.promotion();
+        List<String> recommendationConditions = buildRecommendationConditions(promotion);
         String cashbackValueText = promotion.getCashbackValue() == null
                 ? "0"
                 : promotion.getCashbackValue().stripTrailingZeros().toPlainString();
@@ -111,9 +153,87 @@ public class DecisionEngine {
                 .promotionId(promotion.getPromoId())
                 .promoVersionId(promotion.getPromoVersionId())
                 .validUntil(promotion.getValidUntil())
-                .conditions(promotion.getConditions() == null ? List.of() : List.copyOf(promotion.getConditions()))
+                .conditions(recommendationConditions)
                 .applyUrl(promotion.getApplyUrl())
                 .build();
+    }
+
+    private boolean matchesLocation(Promotion promotion, String requestLocation) {
+        List<String> conditions = promotion.getConditions();
+        if (conditions == null || conditions.isEmpty()) {
+            return true;
+        }
+
+        List<String> locationOnlyTokens = conditions.stream()
+                .map(this::extractLocationOnlyToken)
+                .filter(token -> !token.isBlank())
+                .toList();
+
+        if (locationOnlyTokens.isEmpty()) {
+            return true;
+        }
+
+        String normalizedLocation = normalizeValue(requestLocation);
+        if (normalizedLocation.isBlank()) {
+            return false;
+        }
+
+        return locationOnlyTokens.stream().anyMatch(normalizedLocation::contains);
+    }
+
+    private boolean matchesExcludedConditions(Promotion promotion, RecommendationRequest request) {
+        List<String> excludedConditions = promotion.getExcludedConditions();
+        if (excludedConditions == null || excludedConditions.isEmpty()) {
+            return false;
+        }
+
+        String normalizedCategory = normalizeValue(request.getCategory());
+        String normalizedLocation = normalizeValue(request.getLocation());
+
+        for (String excludedCondition : excludedConditions) {
+            String normalizedCondition = normalizeValue(excludedCondition);
+            if (normalizedCondition.startsWith("CATEGORY:")) {
+                if (normalizedCategory.equals(normalizedCondition.substring("CATEGORY:".length()))) {
+                    return true;
+                }
+            } else if (normalizedCondition.startsWith("LOCATION:")) {
+                String locationToken = normalizedCondition.substring("LOCATION:".length());
+                if (!normalizedLocation.isBlank() && normalizedLocation.contains(locationToken)) {
+                    return true;
+                }
+            }
+        }
+
+        return false;
+    }
+
+    private String extractLocationOnlyToken(String condition) {
+        String normalizedCondition = normalizeValue(condition);
+        if (!normalizedCondition.startsWith("LOCATION_ONLY:")) {
+            return "";
+        }
+
+        return normalizedCondition.substring("LOCATION_ONLY:".length());
+    }
+
+    private List<String> buildRecommendationConditions(Promotion promotion) {
+        List<String> conditions = promotion.getConditions() == null
+                ? new java.util.ArrayList<>()
+                : new java.util.ArrayList<>(promotion.getConditions());
+
+        if (promotion.getMinAmount() != null && promotion.getMinAmount() > 0) {
+            conditions.add("最低消費 " + promotion.getMinAmount() + " 元");
+        }
+
+        if (promotion.isRequiresRegistration()) {
+            conditions.add("需登錄活動");
+        }
+
+        if (promotion.getFrequencyLimit() != null && !promotion.getFrequencyLimit().isBlank()) {
+            conditions.add("頻率限制 " + promotion.getFrequencyLimit().toUpperCase());
+        }
+
+        return conditions.stream().distinct().toList();
     }
 
     private String resolveCashbackSuffix(String cashbackType) {
